== Changelog
=== 4.3 (to be released)
*  System properties names aligned with Configuration fields. e.g. Configuration.someProp always has selenide.someProp equivalent (old names still supported for backward compability)

=== 4.2.1 (Release in January 2017)
* fixed problems with int and boolean capability values, now converting automatically
* added support for FirefoxProfile over commandline (-Dfirefoxprofile.<option>=<value>,
* added support for ChromeOptions (args only) over commandline (-Dchromeoptions.args=<value1>,<value2>...)
* #426 fix error reporting in method `$$().find()`    - see https://github.com/codeborne/selenide/pull/426
* #443 SelenidePageFactory added to support page object initialization without @FindBy annotation   - see https://github.com/codeborne/selenide/pull/443

=== 4.2 (Released 13.12.2016)
* #431 browser=firefox uses legacy driver (works for <=47), browser=marionette - gecko driver (any Firefox)
* Added experimental support of Edge (browser=edge, set webdriver.edge.driver to path to MicrosoftWebDriver.exe)
* #433 bypass spawning local browser
* #391 add method $.selectOptionContainingText()
* #378 Cut off WebElement screenshot size when it doesn't fit in full page screenshot
* #379 added support for transferring any capability via System Property (-Dcapabilities.xxx=yyy)
* support for cloud services like BrowserStack, SauceLabs etc through supporting of  arbitrary capabilities.

=== 4.1 (Released 01.12.2016)
* #428 Improve byAttribute method for search via css selectors
* #419 #425 Added methods `texts(List)` and `exactTexts(List)` to `CollectionCondition`
* Improve support for gecko (marionette) driver
* Upgrade to selenium-java 3.0.1
* Upgrade to htmlunit-driver 2.23.2
* Upgrade to gson 2.8.0
* Upgrade to guava 20.0
* Explicitly declare dependency on newest httpcore:4.4.5 to avoid using old version (that Maven inherits from allure plugin or something like that)

=== 4.0 (Released 15.10.2016)
* #388 Upgrade to selenium-java 3.0.0